// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Dropdown _MenuDark 1`] = `
<div>
  <div
    class="docs-show-dropdown-open"
  >
    <div
      class="dark dropdown-menu"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <h3
              class="header list-item"
            >
              Header
            </h3>
          </li>
          <li>
            <a
              class="right-icon active dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 1 (attivo)
              </span>
              <svg
                aria-hidden="true"
                class="icon right icon-light icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="right-icon dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 2
              </span>
              <svg
                aria-hidden="true"
                class="icon right icon-light icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="right-icon dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 3
              </span>
              <svg
                aria-hidden="true"
                class="icon right icon-light icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
            </a>
          </li>
          <li>
            <span
              class="divider list-item"
            />
          </li>
          <li>
            <a
              class="right-icon dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 4
              </span>
              <svg
                aria-hidden="true"
                class="icon right icon-light icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="right-icon disabled dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 5 (disabilitato)
              </span>
              <svg
                aria-hidden="true"
                class="icon right icon-light icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dropdown _MenuVociAttive 1`] = `
<div>
  <div
    class="docs-show-dropdown-open"
  >
    <div
      class="dropdown-menu"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="active dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 1
                <span
                  class="visually-hidden"
                >
                   attivo
                </span>
              </span>
            </a>
          </li>
          <li>
            <a
              class="dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 2
              </span>
            </a>
          </li>
          <li>
            <a
              class="dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 3
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dropdown _MenuVociDisabilitate 1`] = `
<div>
  <div
    class="docs-show-dropdown-open"
  >
    <div
      class="dropdown-menu"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 1
              </span>
            </a>
          </li>
          <li>
            <a
              aria-disabled="true"
              class="disabled dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 2
              </span>
            </a>
          </li>
          <li>
            <a
              class="dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 3
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dropdown MenuConVociLarge 1`] = `
<div>
  <div
    class="docs-show-dropdown-open"
  >
    <div
      class="dropdown-menu"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="large dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 1
              </span>
            </a>
          </li>
          <li>
            <a
              class="large dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 2
              </span>
            </a>
          </li>
          <li>
            <a
              class="large dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 3
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dropdown MenuFullWidth 1`] = `
<div>
  <div
    class="docs-show-dropdown-open"
  >
    <div
      class="full-width dropdown-menu"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="large dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 1
              </span>
            </a>
          </li>
          <li>
            <a
              class="large dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 2
              </span>
            </a>
          </li>
          <li>
            <a
              class="large dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 3
              </span>
            </a>
          </li>
          <li>
            <a
              class="large dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 4
              </span>
            </a>
          </li>
          <li>
            <a
              class="large dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 5
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dropdown MenuHeadersESeparatori 1`] = `
<div>
  <div
    class="docs-show-dropdown-open"
  >
    <div
      class="dropdown-menu"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <h3
              class="header dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              Header
            </h3>
          </li>
          <li>
            <a
              class="list-item"
            >
              <span>
                Azione 1
              </span>
            </a>
          </li>
          <li>
            <a
              class="dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 2
              </span>
            </a>
          </li>
          <li>
            <a
              class="dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 3
              </span>
            </a>
          </li>
          <li>
            <span
              class="divider list-item"
            />
          </li>
          <li>
            <a
              class="dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 4
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dropdown MenuIconaADestra 1`] = `
<div>
  <div
    class="docs-show-dropdown-open"
  >
    <div
      class="dropdown-menu"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="right-icon dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 1
              </span>
              <svg
                aria-hidden="true"
                class="icon right icon-primary icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="right-icon dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 2
              </span>
              <svg
                aria-hidden="true"
                class="icon right icon-primary icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="right-icon dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <span>
                Azione 3
              </span>
              <svg
                aria-hidden="true"
                class="icon right icon-primary icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dropdown MenuIconaASinistra 1`] = `
<div>
  <div
    class="docs-show-dropdown-open"
  >
    <div
      class="dropdown-menu"
    >
      <div
        class="link-list-wrapper"
      >
        <ul
          class="link-list"
        >
          <li>
            <a
              class="left-icon dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="icon left icon-primary icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
              <span>
                Azione 1
              </span>
            </a>
          </li>
          <li>
            <a
              class="left-icon dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="icon left icon-primary icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
              <span>
                Azione 2
              </span>
            </a>
          </li>
          <li>
            <a
              class="left-icon dropdown-item list-item"
              role="menuitem"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="icon left icon-primary icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
                />
              </svg>
              <span>
                Azione 3
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
